--- a/lcmetre.x/nbproject/Makefile-genesis.properties
+++ b/lcmetre.x/nbproject/Makefile-genesis.properties
@@ -1,9 +1,9 @@
 #
-#Sun Oct 29 11:48:04 CET 2017
-default.languagetoolchain.dir=/Applications/microchip/xc8/v1.38/bin
-configurations-xml=63326be8379601c70980d42f458d060d
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=52742b11d992fb0dd234edfb95066b34
-default.languagetoolchain.version=1.38
-host.platform=mac
+#Fri Nov 03 09:48:32 CET 2017
+default.languagetoolchain.dir=/opt/microchip/xc8/v1.44/bin
+configurations-xml=9fd380e225ef6024bf9bd5c48b8bc0e6
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=d60721ed056d19183cb20bfa5aba57ae
+default.languagetoolchain.version=1.44
+host.platform=linux
 conf.ids=default
-default.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=7f6e3d13eb4d9b68ce233f796e69ba05
+default.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=f2c5ed4f70e42738a0f2aee922f49302
